# ImpRA

./: .gitignore  Inverse_Filter_CHIRP.py  Lundeby.py  Parameters.py  README.md  RIRP.py  RIRP1.py  RIR_Generator.py  Schroeder.py  aloh.txt  filter_IR.py  main.py  pyproject.toml  test.py
GUI/: pyqt_to_python.md  user-interface.ui
audio_functionalities/: audio_utils.py  filtering.py
filters/: third_octave_band_butterworths.json
impra/app/: app.py
impra/app/gui/: qt.py  ui_user-interface.py
impra/engine/: core.py
impra/process/: audio_utils.py  filtering.py  parameters.py  smoothing.py
impra/process/filters_weights/: octave_band_butterworths.json
impra/utils/: utils.py
impra/visualization/: plot.py
notebooks/: playground.ipynb
